tests/ui/unstable-features/negative_impls.stderr
error: cross-crate traits with a default impl, like `Unpin`, should not be specialized
  --> tests/ui/unstable-features/negative_impls.rs:19:1
   |
19 | impl Unpin for Foo<MyPhantomPinned, ()> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this will change its meaning in a future release!
   = note: for more information, see issue #93367 <https://github.com/rust-lang/rust/issues/93367>
   = note: `MyPhantomPinned` is not a generic parameter
note: try using the same sequence of generic parameters as the struct definition
  --> tests/ui/unstable-features/negative_impls.rs:10:1
   |
10 | struct Foo<Pinned, Unpinned> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: the lint level is defined here
  --> tests/ui/unstable-features/negative_impls.rs:4:9
   |
4  | #![deny(suspicious_auto_trait_impls)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
